--- a/dashboard.html
+++ b/dashboard.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-    <h1>Suivi en Direct du Serveur Webhook</h1>
+    <h1>Tableau de Bord des Transactions Webhook</h1>
 
     <table>
         <thead>
